Revision history for Perl extension Devel::Memory.

0.02 2012-10-02 Tim Bunce

 * Renamed to Devel::SizeMe.
 * Assorted fixes, cleanups and polish.

0.01 2012-09-29 Tim Bunce

 * Created new Devel::Memory extension using a modified version of
    Devel::Size's perl memory data crawler, extended to support
    callbacks, a 'data path name' concept, data streaming,
    data processing and visualization.

 * The Devel::Memory core was based on 0.77. The generic changes
    will be fed back to Devel::Size so it will remain the
    canonical source of knowledge of how to crawl perl internals.
    Once Devel::Size has the changes then Devel::Memory will use
    it as the core, but compiled with options to enable the extra
    features. That way Devel::Size won't have any performance penalty.

 * This is very much experimental 'alpha' software. You're milage will
    vary and anything may change between releases.